--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
     "axios": "^0.21.1",
@@ -60,6 +63,7 @@
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-dropzone-component": "^3.2.0",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
@@ -69,7 +73,7 @@
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "3.10.3",
+    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
   },
